--- a/public/global.css
+++ b/public/global.css
@@ -49,12 +49,23 @@ table {
 
 body {
 	margin: 0;
-	min-height: 100vh;
+  min-height: 100vh;
+  color: #3333;
 	display: flex;
 	flex-direction: column;
 	font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
+.sr-only {
+  /* @TODO: add proper sr-only styles, this will remove it for a11y... */
+  display: none;
+}
+
 h2, .h2 {
 	font-size: 2.2rem;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
